gitops/apps/order-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2026-08-31T19:45:15Z"
  generation: 1
  name: order-service-ingress
  namespace: dev
  resourceVersion: "2811"
  uid: 63ec3b49-2d70-4fad-8997-baec492d1096
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: order-service
            port:
              number: 80
        path: /api/orders
        pathType: Exact
status:
  loadBalancer:
    ingress:
    - ip: 192.168.49.2
